--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   font_awesome_flutter: ^8.4.0
   simple_animations: ^2.2.1
   intl_phone_number_input:
+  flutter_map: any
+  flutter_map_marker_cluster: any
+  geolocator: ^6.0.0+4
   
 dev_dependencies:
   flutter_test:
