--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_map_marker_cluster: any
   geolocator: ^6.0.0+4
   flutter_rating_bar: ^3.0.1+1
+  flutter_slidable: ^0.5.7
   
 dev_dependencies:
   flutter_test:
