--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter  
 
   cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.4.0
@@ -34,10 +35,13 @@ dependencies:
   geolocator: ^6.0.0+4
   flutter_rating_bar: ^3.0.1+1
   flutter_slidable: ^0.5.7
-  
+      
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,4 +53,6 @@ flutter:
 
   assets:
     - images/
+    - lang/en.json
+    - lang/ar.json
   
