--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   geolocator: ^6.0.0+4
   flutter_rating_bar: ^3.0.1+1
   flutter_slidable: ^0.5.7
+  provider: ^4.3.2+2
+  flutter_cupertino_localizations: ^1.0.1
       
 
 dev_dependencies:
